fix bug: datepicker distorted in firefox. (fixes #862)

--- a/src/app/iteration/iteration-modal/iteration-modal.component.scss
+++ b/src/app/iteration/iteration-modal/iteration-modal.component.scss
@@ -11,6 +11,9 @@
 .datepicker-container {
   display: flex;
   justify-content: space-between;
+  .date-container {
+    width: 50%;
+  }
 }
 .start-date-container {
   padding-right: em(5);
